<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6EAF8"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repolist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/repositories_string"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePhoto"/>

    <TextView
        android:id="@+id/User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/username_string"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfilePhoto"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePhoto"
        app:layout_constraintTop_toTopOf="@+id/ivProfilePhoto"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/Following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/following_string"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/User"
        app:layout_constraintTop_toBottomOf="@+id/User" />

    <TextView
        android:id="@+id/githubrepositories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GithubRepositories_string"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivProfilePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="51dp"
        android:layout_height="388dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repolist"
        app:layout_constraintVertical_bias="0.463" />

    <TextView
        android:id="@+id/Followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/Followers"
        android:textColor="#090909"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Following"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/User" />
</androidx.constraintlayout.widget.ConstraintLayout>