<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6EAF8"
    tools:context=".fragments.ConnectionErrorFragment">

    <ImageView
        android:id="@+id/ivConnectionError"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:backgroundTintMode="add"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/connection_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32"
        app:tint="#154360" />

    <TextView
        android:id="@+id/tvConnectionError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/connection_error_string"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivConnectionError"
        tools:text="Error trying to connect to the server" />

    <Button
        android:id="@+id/btnRetryConnectionError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#2E86C1 "
        android:text="@string/retry_string"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConnectionError" />
</androidx.constraintlayout.widget.ConstraintLayout>